Added name and 3 list items

--- a/assignment1.html
+++ b/assignment1.html
@@ -24,5 +24,10 @@
       If you don't know how to make the above mentioned tags, either take a look around on
       the internet, or don't hesitate to ask me!
     -->
-  </body>
+    <h1>Salvatore Avena</h1>
+    <ul>
+      <li>Completed CS 0134 Web Site Design and Development</li>
+      <li>Worked minimally with SQL databases during summer internship</li>
+      <li>Like using the internet</li>
+    </ul>  </body>
 </html>
